--- a/fetch.html
+++ b/fetch.html
@@ -6,14 +6,57 @@
   <link rel="stylesheet" href="fetch.css">
 </head>
 <body>
-  <div class="container">
-    <h1 id="article-title" class="my-4"></h1>
-    <img id="article-img" />
-    <p id="article-snippet" class="my-3"></p>
-    <p><a id="article-link">Full Article</a></p>
+
+  <!--Form that takes a date-->
+  <div class="search-form">
+    <form id="user-query">
+      <label for="date-requested">Find top 5 best-selling hardcover fiction books in: </label>
+      <input type="date" id="date-requested">
+      <input type="submit" value="Look up">
+    </form>
   </div>
 
-  <script src="fetch-api-key.js"></script>
+  <!--Displays the first book-->
+  <div class="container">
+    <h1 class="book-title my-4"></h1>
+    <img class="book-img" />
+    <p class="book-author my-3"></p>
+    <p class="book-description"></p>
+  </div>
+
+  <!--Displays the second book-->
+  <div class="container">
+    <h1 class="book-title my-4"></h1>
+    <img class="book-img" />
+    <p class="book-author my-3"></p>
+    <p class="book-description"></p>
+  </div>
+
+  <!--Displays the third book-->
+  <div class="container">
+    <h1 class="book-title my-4"></h1>
+    <img iclassd="book-img" />
+    <p class="book-author my-3"></p>
+    <p class="book-description"></p>
+  </div>
+
+  <!--Displays the fourth book-->
+  <div class="container">
+    <h1 class="book-title my-4"></h1>
+    <img class="book-img" />
+    <p class="book-author my-3"></p>
+    <p class="book-description"></p>
+  </div>
+
+  <!--Displays the fifth book-->
+  <div class="container">
+    <h1 class="book-title my-4"></h1>
+    <img class="book-img" />
+    <p class="book-author my-3"></p>
+    <p class="book-description"></p>
+  </div>
+
+  <!--<script src="fetch-api-key.js"></script>-->
   <script src="fetch.js"></script>
 </body>
 </html>
